# calculator-fastmcp

./: README.md  main.py  main_hybrid.py  pyproject.toml
